--- a/app/src/main/res/layout/fragment_coin_list.xml
+++ b/app/src/main/res/layout/fragment_coin_list.xml
@@ -5,9 +5,10 @@
     android:id="@+id/list"
     android:name="com.example.myapplication.CoinFragment"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:layout_marginLeft="16dp"
     android:layout_marginRight="16dp"
+    android:visibility="visible"
     app:layoutManager="LinearLayoutManager"
     tools:context=".CoinFragment"
     tools:listitem="@layout/fragment_coin" />
